# vector-lab

./: CMakeLists.txt  LICENSE.txt  README.md
src/: main.cpp
src/_core/math/: matrix_operations.h  operations.h  vector_operations.h
src/_core/structures/: matrix.h  vector.h
test/: run_tests.cpp  test.cpp  test.h
